--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row" id="nft-masonry" data-masonry='{"percentPosition": true }'>
                 <div class="col-sm-6 col-lg-4 mb-4">
                     <div class="card">
-                      <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+                      <img class="bd-placeholder-img card-img-top" style="width:100%" src="https://via.placeholder.com/512"/> 
               
                       <div class="card-body">
                         <h5 class="card-title">Card title that wraps to a new line</h5>
